--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,13 +16,15 @@ html {
 }
 
 section {
-    margin-top: 20px;
-    margin-bottom: 20px;
-    padding: 10px;
+    min-height: 500px;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    /* padding: 10px; */
 }
 
 p {
     font-size: 20px;
+    text-align: justify;
 }
 
 h3 h5 h4 {
@@ -113,6 +115,11 @@ h3 h5 h4 {
     align-items: center;
 }
 
+.lista-2 {
+    margin-left: 20px;
+    margin-right: 10px;
+}
+
 
 @media screen and (max-width: 768px) {
     .programacion-contenedor img {
@@ -125,4 +132,42 @@ h3 h5 h4 {
         align-items: center;
         margin: 10px;
     }
+}
+
+/* Diagramas de flujo */
+
+.df-contenedor {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.df-contenedor h2 {
+    text-align: center;
+    font-family: "Bebas Neue", sans-serif;
+}
+
+.df-img {
+    justify-content: center;
+    align-items: center;
+}
+
+.df-contenedor img {
+    max-width: 400px;
+}
+
+.df-btn a {
+    justify-content: space-between;
+    font-family: "Bebas Neue", sans-serif;
+    width: 200px;
+    border: none;
+}
+
+.df-btn a:hover {
+    color: black;
+    background-color: rgba(189, 255, 216, 0.692);
+}
+
+.df-fin {
+    flex-direction: column;
 }
